--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@drizzle/react-components": "^1.5.3",
+    "@drizzle/react-plugin": "^1.5.3",
+    "@drizzle/store": "^1.5.0",
     "@fortawesome/fontawesome-free": "5.15.1",
     "@material-ui/core": "^4.11.3",
     "@testing-library/jest-dom": "^5.11.10",
@@ -11,15 +14,11 @@
     "bootstrap": "^4.6.0",
     "chart.js": "2.9.4",
     "classnames": "2.2.6",
-    "@drizzle/store": "^1.5.0",
-    "@drizzle/react-plugin": "^1.5.3",
-    "@drizzle/react-components": "^1.5.3",
     "emailjs-com": "^2.6.4",
     "history": "^5.0.0",
     "ipfs-http-client": "^28.0",
     "material-table": "^1.69.2",
     "next": "9.4.4",
-    "sass": "1.50.0",
     "node-sass-package-importer": "5.3.2",
     "perfect-scrollbar": "1.5.0",
     "prop-types": "15.7.2",
@@ -38,9 +37,12 @@
     "reactstrap": "8.7.1",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
+    "sass": "1.50.0",
     "video-react": "^0.14.1",
     "web-vitals": "^1.1.1",
-    "web3": "^1.2.2"
+    "web3": "^1.2.2",
+    "webpack": "^4.44.2",
+    "webpack-dev-server": "^3.11.1"
   },
   "scripts": {
     "start": "react-scripts start",
